--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
                 </div>
                 <button id="increase-mana" onclick="increaseMana(1)">Get Mana</button>
             </div>
-            <div id="upgrade-list" class="row g-1">
+            <div id="building-list" class="row g-1">
 
             </div>
         </div>
 
         <script type="text/javascript" src="scripts/bootstrap.bundle.min.js"></script>
         <script type="text/javascript" src="scripts/mana.js"></script>
-        <script type="text/javascript" src="scripts/Upgrade.js"></script>
-        <script type="text/javascript" src="scripts/UpgradesList.js"></script>
+        <script type="text/javascript" src="scripts/Building.js"></script>
+        <script type="text/javascript" src="scripts/BuildingList.js"></script>
         <script type="text/javascript" src="scripts/main.js"></script>
     </body>
 </html>
